@@ -3692,6 +3692,8 @@ qc pass: mspw over ebgp
 qc pass: mspw over ibgp
 qc pass: mspw over bgp additional path
 qc pass: mspw over ibgp rr
+qc pass: mspw over confed bgp
+qc pass: mspw over bgp route server
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
