@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-01 12:21:07, took 00:19:16, with 50 workers, on 4238 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2026-02-01 12:38:03, took 00:12:43, with 50 workers, on 4240 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3708,6 +3708,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp934.tst">rout-bgp934.tst</a></td><td>success</td><td>mspw over ibgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp935.tst">rout-bgp935.tst</a></td><td>success</td><td>mspw over bgp additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp936.tst">rout-bgp936.tst</a></td><td>success</td><td>mspw over ibgp rr</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp937.tst">rout-bgp937.tst</a></td><td>success</td><td>mspw over confed bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp938.tst">rout-bgp938.tst</a></td><td>success</td><td>mspw over bgp route server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
